# mobicore

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: welcome.yml
IMPL/: .gitignore
IMPL/bsd/: .cshrc  setup-env.sh
IMPL/bsd/put-into-usr.mobile/: .gitignore  info.json  settings.json
IMPL/bsd/root/: .shrc
IMPL/free_plan/your_bridge_vds/usr.mobile/: .gitignore  App_Encrypter  config.json  mt_constants.json  settings.json
IMPL/free_plan/your_bridge_vds/usr.mobile/bridge/: README.txt
IMPL/free_plan/your_bridge_vds/usr.mobile/scripts/: setup-bridge.sh
IMPL/free_plan/your_bridge_vds/usr.mobile/scripts/extra/: README.txt  convert_names.py  item_names_de.txt  item_names_en.txt  item_names_es.txt  item_names_it.txt  item_names_pl.txt  item_names_pt.txt  item_names_ro.txt  item_names_tr.txt  mob_names_de.txt  mob_names_en.txt  mob_names_es.txt  mob_names_it.txt  mob_names_pl.txt  mob_names_pt.txt  mob_names_ro.txt  mob_names_tr.txt  mt_constants.json
IMPL/free_plan/your_bridge_vds/usr.mobile/scripts/linux/: setup-bridge.sh
IMPL/free_plan/your_bridge_vds/usr.mobile/scripts/linux/secondary/: setup_alias.sh  setup_cron.sh  setup_env.sh  setup_iptables.sh  setup_sql.sh  setup_ssl.sh
IMPL/free_plan/your_bridge_vds/usr.mobile/scripts/secondary/: jsonfield-value.py  setup_cfg.sh  setup_cron.sh  setup_env.sh  setup_ipfw.sh  setup_sql.sh  setup_ssl.sh  update-json.py
IMPL/mt/client/icon/mobile/ch/: mobile.mse
IMPL/mt/client/root/: playersettingmodule.py  uimessenger.py
IMPL/mt/source/binary/UserInterface/: InstanceBase.h  InstanceBaseEffect.cpp  Locale.cpp  Locale.h  Locale_inc.h  Packet.h  PythonApplicationModule.cpp  PythonCharacterModule.cpp  PythonChat.h  PythonChatModule.cpp  PythonMessenger.cpp  PythonMessenger.h  PythonNetworkStreamPhaseGame.cpp
IMPL/mt/source/intensity_test_plug/: cmd.cpp  packet.h
IMPL/mt/source/offshop_ikarus/server/game.src/: ikarus_shop.cpp  ikarus_shop_manager.cpp
IMPL/mt/source/server/: .gitignore  NOTE.txt
IMPL/mt/source/server/common/: length.h  tables.h
IMPL/mt/source/server/db.src/: ClientManager.cpp  ClientManager.h  Makefile
IMPL/mt/source/server/game.src/: CMakeLists.txt  Makefile  affect.h  char.cpp  char.h  char_battle.cpp  char_change_empire.cpp  db.cpp  db.h  desc.cpp  desc.h  desc_manager.cpp  desc_manager.h  guild.cpp  guild.h  guild_manager.cpp  guild_war.cpp  ikarus_shop.cpp  ikarus_shop_manager.cpp  input.cpp  input.h  input_auth.cpp  input_db.cpp  input_login.cpp  input_main.cpp  input_p2p.cpp  main.cpp  messenger_manager.cpp  messenger_manager.h  p2p.cpp  p2p.h  packet.h  packet_info.cpp  premake.lua  sectree_manager.cpp  sectree_manager.h  war_map.cpp  war_map.h
IMPL/mt/source/server/game.src/mobigame/: mobi_client.cpp  mobi_client.h
IMPL/mt/source/server/game.src/mobigame/admin/: admin_data_manager.cpp  admin_data_manager.h  config_manager.cpp  config_manager.h  notification.cpp  notification.h  queries.h
IMPL/mt/source/server/game.src/mobigame/character/: ch_manager.cpp  ch_manager.h
IMPL/mt/source/server/game.src/mobigame/client/: client_base.cpp  client_base.h  client_core.cpp  client_core.h  client_util.cpp  mobi_base.cpp  mobi_base.h  packet_handlers.cpp  packet_registry.cpp
IMPL/mt/source/server/game.src/mobigame/constants/: consts.cpp  consts.h  custom_packets.h  ingame_constants.h  packet_constants.h  packets.h
IMPL/mt/source/server/game.src/mobigame/mobi/: base.cpp  packet_handlers.cpp  packet_registry.cpp  sync.cpp  test.cpp
IMPL/mt/source/server/game.src/mobigame/unprocessed/: containers.cpp  containers.h  message_queue.cpp  message_queue.h  unprocessed.cpp  unprocessed.h
IMPL/mt/source/server/intensity_test_plug/: cmd.cpp  cmd_gm.cpp  input_p2p.cpp  packet.h
IMPL/your_freebsd_vds/usr.mobile/: .gitignore  notifications.json
IMPL/your_freebsd_vds/usr.mobile/scripts/: setup-mobi.sh
IMPL/your_freebsd_vds/usr.mobile/scripts/secondary/: detect-ip.py  setup-sql.sh  setup_env.sh  setup_sql.sh  update-json.py
IMPL/your_freebsd_vds/usr.mobile/src/: NOTE.txt
README/: en.md  installation_en.md  installation_free_en.md  installation_free_tr.md  installation_tr.md  logic_en.md  logic_tr.md  privacy_policy.md  tr.md
README/docs/: logic_en.md  logic_tr.md  packets_en.md  packets_tr.md  tech_en.md  tech_tr.md  this_en.md  this_tr.md
Source/: .gitignore
Source/Core/: openssl_compat.h  singleton.h
Source/Core/Abstract/: abstract_logger.cpp  abstract_logger.h
Source/Core/Singletons/: crypter.cpp  crypter.h  json_loader.cpp  json_loader.h  json_manager.cpp  json_manager.h  log_manager.cpp  log_manager.h
Source/Core/Utility/: container.h  flag_wrapper.h  random_generator.h  template.hpp
Source/Raw/: constants.h  external_constants.h  packet_descriptor.h  raw_client.cpp  raw_client.h  raw_data.cpp  raw_session.cpp
Source/Raw/Network/: buffer.cpp  buffer.h  common.h  crypto_helper.cpp  crypto_helper.h  error_handler.cpp  error_handler.h  key_exchange.cpp  key_exchange.h
cmake/: path_settings.cmake
